--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
+    "sweetalert2": "^11.14.5",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
