--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@primevue/themes": "^4.2.2",
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.2",
     "sweetalert2": "^11.14.5",
     "vue": "^3.5.12",
     "vue-organization-chart": "^1.1.6",
