--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sweetalert2": "^11.14.5",
     "vue": "^3.5.12",
     "vue-organization-chart": "^1.1.6",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
