--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@mdi/font": "^7.4.47",
     "@primevue/themes": "^4.2.2",
     "axios": "^1.7.7",
+    "orgchart": "^4.0.1",
     "pinia": "^2.2.6",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.2",
     "sweetalert2": "^11.14.5",
     "vue": "^3.5.12",
     "vue-organization-chart": "^1.1.6",
+    "vue-orgchart": "^1.1.7",
     "vue-router": "^4.4.5",
     "zxcvbn": "^4.4.2"
   },
