--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-organization-chart": "^1.1.6",
     "vue-orgchart": "^1.1.7",
     "vue-router": "^4.4.5",
+    "vuedraggable": "^4.1.0",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
