--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.7.7",
+    "face-api.js": "^0.22.2",
     "orgchart": "^4.0.1",
     "pinia": "^2.2.6",
     "primeicons": "^7.0.0",
