--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.2.2",
     "sweetalert2": "^11.14.5",
+    "tesseract.js": "^5.1.1",
     "vue": "^3.5.12",
     "vue-organization-chart": "^1.1.6",
     "vue-orgchart": "^1.1.7",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "typescript": "^5.7.2",
     "vite": "^5.4.10",
     "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.7.4"
